--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -16,6 +16,26 @@
         <url-pattern>/jobs/title</url-pattern>   
         <url-pattern>*.*</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>SwaggerJaxrsConfig</servlet-name>
+        <servlet-class>
+            com.jobs.rest.SwaggerJaxrsConfig
+        </servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet> 
+    <!-- enable CORS filter so people can use swagger ui to browse and test the apis -->
+  <filter>
+    <filter-name>HTML5CorsFilter</filter-name>
+    <filter-class>com.jobs.rest.HTML5CorsFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>HTML5CorsFilter</filter-name>
+    <url-pattern>/api-docs/*</url-pattern>
+    <url-pattern>/rest/*</url-pattern>
+  </filter-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
